[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Test/TestAnswer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Test/MainWordThaiLabel.tscn" type="PackedScene" id=3]
[ext_resource path="res://Test/test_bg.png" type="Texture" id=4]
[ext_resource path="res://Test/Letter/TestThaiFromPronLet16.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Explanation" type="Label" parent="."]
anchor_right = 1.0
margin_top = 16.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.309804, 0.309804, 0.309804, 1 )
text = "_which_letter_corresponds_to_this_sound"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Thai" parent="." instance=ExtResource( 3 )]
margin_left = -80.0
margin_top = -66.0
margin_right = 74.0
margin_bottom = -23.0
text = "p'h"

[node name="answer_1" parent="." instance=ExtResource( 2 )]
position = Vector2( 97.9699, 124.674 )

[node name="answer_2" parent="." instance=ExtResource( 2 )]
position = Vector2( 235.707, 100.221 )

[node name="answer_3" parent="." instance=ExtResource( 2 )]
position = Vector2( 128.074, 103.511 )

[node name="answer_4" parent="." instance=ExtResource( 2 )]
position = Vector2( 156.618, 130.934 )

[node name="answer_5" parent="." instance=ExtResource( 2 )]
position = Vector2( 55.0804, 103.511 )

[node name="answer_6" parent="." instance=ExtResource( 2 )]
position = Vector2( 242.505, 130.934 )

[node name="answer_7" parent="." instance=ExtResource( 2 )]
position = Vector2( 193.459, 116.935 )

[node name="answer_8" parent="." instance=ExtResource( 2 )]
position = Vector2( 171.707, 90.5338 )

[node name="answer_9" parent="." instance=ExtResource( 2 )]
position = Vector2( 87.0804, 82.5338 )

[node name="answer_10" parent="." instance=ExtResource( 2 )]
position = Vector2( 128.074, 74.5338 )

[node name="answer_11" parent="." instance=ExtResource( 2 )]
position = Vector2( 193.459, 66.5338 )

[node name="answer_12" parent="." instance=ExtResource( 2 )]
position = Vector2( 235.707, 75.5338 )

[node name="answer_13" parent="." instance=ExtResource( 2 )]
position = Vector2( 275.707, 59.5338 )

[node name="answer_14" parent="." instance=ExtResource( 2 )]
position = Vector2( 55.0804, 59.5338 )

[node name="answer_15" parent="." instance=ExtResource( 2 )]
position = Vector2( 51.7071, 133.935 )

[node name="answer_16" parent="." instance=ExtResource( 2 )]
position = Vector2( 283.707, 92.5338 )
